objects/Regra_de_cota_de_produto__c.object
<CustomObject>
    <fields>
        <fullName>Canal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Canal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cota__c</fullName>
        <label>Cota</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Regional__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Regional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sku__c</fullName>
        <externalId>true</externalId>
        <label>SKU</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subcanal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subcanal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_em_distribui_es_de_cota__c</fullName>
        <label>Total em distribuições de cota</label>
        <summarizedField>Distribuicao_de_cota_de_produto__c.Cota__c</summarizedField>
        <summaryForeignKey>Distribuicao_de_cota_de_produto__c.Regra_de_cota_de_produto__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Regra de cota de produto</label>
    <nameField>
        <displayFormat>RCP{000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Regras de cota de produto</pluralLabel>
    <recordTypes>
        <fullName>BRA_Standard</fullName>
        <active>true</active>
        <description>Brazil standard record type</description>
        <label>BRA Standard</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>